vcluster_versioned_docs/version-0.22.0/_partials/config/exportKubeConfig.mdx

<details className="config-field" data-expandable="true">
<summary>

## `exportKubeConfig` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig}

ExportKubeConfig describes how vCluster should export the vCluster kubeConfig file.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `context` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-context}

Context is the name of the context within the generated kubeconfig to use.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `server` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-server}

Override the default https://localhost:8443 and specify a custom hostname for the generated kubeconfig.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `insecure` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-insecure}

If tls should get skipped for the server

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `serviceAccount` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-serviceAccount}

ServiceAccount can be used to generate a service account token instead of the default certificates.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-serviceAccount-name}

Name of the service account to be used to generate a service account token instead of the default certificates.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-serviceAccount-namespace}

Namespace of the service account to be used to generate a service account token instead of the default certificates.
If omitted, will use the kube-system namespace.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `clusterRole` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-serviceAccount-clusterRole}

ClusterRole to assign to the service account.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `secret` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-secret}

Declare in which host cluster secret vCluster should store the generated virtual cluster kubeconfig.
If this is not defined, vCluster will create it with `vc-NAME`. If you specify another name,
vCluster creates the config in this other secret.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `name` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-secret-name}

Name is the name of the secret where the kubeconfig should get stored.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `namespace` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#exportKubeConfig-secret-namespace}

Namespace where vCluster should store the kubeconfig secret. If this is not equal to the namespace
where you deployed vCluster, you need to make sure vCluster has access to this other namespace.

</summary>



</details>


</details>


</details>
